#25 添加SHA系列签名算法